<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    tools:context=".Fragments.FragmentMiCuenta">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardUseCompatPadding="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:elevation="150dp"
            app:cardCornerRadius="2dp"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/header_cover_image"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/navig"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_propietario_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_above="@+id/header_cover_image"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="112dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/boder_rect"
                    android:elevation="5dp"
                    android:padding="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/header_cover_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_propietario_photo">

                    <TextView
                        android:id="@+id/txt_account_nombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="Nombre"
                        android:textColor="@color/colorPrimaryDark2"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/account_dniUsuario"
                                android:textColor="@color/colorPrimaryDark2" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/account_correo"
                                android:textColor="@color/colorPrimaryDark2" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/account_estado"
                                android:textColor="@color/colorPrimaryDark2" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/account_telefono"
                                android:textColor="@color/colorPrimaryDark2" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/account_genero"
                                android:textColor="@color/colorPrimaryDark2" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/account_edad"
                                android:textColor="@color/colorPrimaryDark2" />
                            />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/account_direccion"
                                android:textColor="@color/colorPrimaryDark2" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/account_intereses"
                                android:textColor="@color/colorPrimaryDark2"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_account_dni"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp" />

                            <TextView
                                android:id="@+id/txt_account_correo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp" />

                            <TextView
                                android:id="@+id/txt_account_estado"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp" />

                            <TextView
                                android:id="@+id/txt_account_telefono"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp" />

                            <TextView
                                android:id="@+id/txt_account_genero"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp" />

                            <TextView
                                android:id="@+id/txt_account_edad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp" />

                            <TextView
                                android:id="@+id/txt_account_direccion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp" />
                            <TextView
                                android:id="@+id/txt_account_intereses"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"/>
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/but_account_actualizar"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="Actualizar datos"
                        android:textColor="@color/colorwhite"
                        android:textSize="11sp"
                        android:textStyle="italic" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>