<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePassUserActivity">

    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:id="@+id/reg_Iseda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_mensajeRecuperaciontitle"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark2"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/reg_mensajeRecuperacion"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/colorbluelight">
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="9.5">
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contextClickable="false">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/regc_correo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/reg_correo"
                                android:textColorHint="@color/colorPrimary"
                                android:textSize="16sp"
                                android:imeActionLabel="prueba"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textEmailAddress"
                                android:drawableLeft="@drawable/ic_register"
                                android:background="@color/colorwhite"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/regc_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Recuperar"
                android:textColor="#FFFFFF"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_guardar"
                android:backgroundTint="@color/colorbuttonrecupera"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>